--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "websocket-server",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsx server.ts"
+    "start": "nodemon --exec \"tsx index.ts\" --ext ts"
   },
   "keywords": [],
   "dependencies": {
@@ -10,6 +10,7 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.12"
+    "@types/ws": "^8.5.12",
+    "nodemon": "^3.1.7"
   }
 }
